--- a/index.html
+++ b/index.html
@@ -6,8 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PlayStation</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- HEADER  -->
+    <header>
+        <div class="container-fluid p-0">
+            <!-- HEADER-TOP  -->
+            <div class="header-top d-flex justify-content-end align-items-center py-2">
+                <div class="sony-logo mx-3 ">
+                    <img class="sony" src="img/sony_logo.svg" alt="Logo-sony">
+                </div>
+            </div>
+            <!-- /HEADER-TOP  -->
+            <!-- HEADER-BOTTOM  -->
+            <div class="header-bottom bg-white">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <div class="container-fluid">
+                      <img class="me-3" src="img/play_logo.svg" alt="logo-playstation">
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Giochi <i class="fa-solid fa-angle-down mx-2"></i></a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Hardware <i class="fa-solid fa-angle-down mx-2"></i></a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Servizi <i class="fa-solid fa-angle-down mx-2"></i></a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Novità <i class="fa-solid fa-angle-down mx-2"></i></a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Acquisti <i class="fa-solid fa-angle-down mx-2"></i></a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Supporto <i class="fa-solid fa-angle-down mx-2"></i></a>
+                              </li>
+                          </li>
+                        </ul>
+                        <div class="container d-flex justify-content-end align-items-center">  
+                            <a class="nav-link active text-black fw-bold" aria-current="page" href="#">My Playstation <i class="fa-solid fa-angle-down mx-2"></i></a>
+                            <button class="btn-login me-3 px-3 py-2" type="submit">Accedi</button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                            </svg>
+                        </div>
+                      </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+        <!-- /HEADER-BOTTOM  -->
+    </header>
+    <!-- /HEADER  -->
     
 </body>
 </html>
