--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
                               <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Supporto <i class="fa-solid fa-angle-down mx-2"></i></a>
                               </li>
-                          </li>
                         </ul>
                         <div class="container d-flex justify-content-end align-items-center">  
                             <a class="nav-link active text-black fw-bold" aria-current="page" href="#">My Playstation <i class="fa-solid fa-angle-down mx-2"></i></a>
@@ -65,6 +64,61 @@
         <!-- /HEADER-BOTTOM  -->
     </header>
     <!-- /HEADER  -->
-    
+    <main>
+      <!-- SEZIONE HERO  -->
+      <section class="hero">
+        <div class="container-fluid px-5 custom">
+          <div class="row py-3">
+            <div class="col">
+              <img class="returnal" src="img/returnal-hero-banner-logo.png" alt="">
+            </div>
+          </div>
+            <div class="row text-white">
+              <div class="col">
+                <h1>Rompi il cerchio</h1>
+            </div>
+          </div>
+          <div class="row text-white py-3">
+            <div class="col-sm-8 col-md-8 col-lg-4">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At illum perferendis dolore assumenda doloremque nulla consequatur, odit, dolor saepe accusamus nemo, voluptates exercitationem iusto necessitatibus blanditiis ducimus velit laudantium culpa?</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 col-md-8 col-lg-4">
+              <button class="btn-buy px-3 py-2">Acquista ora</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /SEZIONE HERO  -->
+
+      <!-- SECONDA SEZIONE HERO  -->
+      <section>
+        <div class="container-fluid py-5 px-5">
+          <div class="row">
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 pb-3">
+              <img class="img-fluid game" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 pb-3">
+              <img class="img-fluid game" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 pb-3">
+              <img class="img-fluid game" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 pb-3">
+              <img class="img-fluid game" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 pb-3">
+              <img class="img-fluid game" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 pb-3">
+              <img class="img-fluid game" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECONDA SEZIONE HERO  -->
+
+   </main>
 </body>
 </html>
