aggiunta prima sezione main

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container-fluid p-0">
             <!-- HEADER-TOP  -->
             <div class="header-top d-flex justify-content-end align-items-center py-2">
-                <div class="sony-logo mx-3 ">
+                <div class="sony-logo mx-2">
                     <img class="sony" src="img/sony_logo.svg" alt="Logo-sony">
                 </div>
             </div>
@@ -51,7 +51,7 @@
                         </ul>
                         <div class="container d-flex justify-content-end align-items-center">  
                             <a class="nav-link active text-black fw-bold" aria-current="page" href="#">My Playstation <i class="fa-solid fa-angle-down mx-2"></i></a>
-                            <button class="btn-login me-3 px-3 py-2" type="submit">Accedi</button>
+                            <button class="btn_login me-3 px-3 py-2" type="submit">Accedi</button>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                             </svg>
@@ -67,7 +67,7 @@
     <main>
       <!-- SEZIONE HERO  -->
       <section class="hero">
-        <div class="container-fluid px-5 custom">
+        <div class="container-fluid px-3 custom">
           <div class="row py-3">
             <div class="col">
               <img class="returnal" src="img/returnal-hero-banner-logo.png" alt="">
@@ -85,7 +85,7 @@
           </div>
           <div class="row">
             <div class="col-sm-8 col-md-8 col-lg-4">
-              <button class="btn-buy px-3 py-2">Acquista ora</button>
+              <button class="btn_buy px-3 py-2">Acquista ora</button>
             </div>
           </div>
         </div>
@@ -94,7 +94,7 @@
 
       <!-- SECONDA SEZIONE HERO  -->
       <section>
-        <div class="container-fluid py-5 px-5">
+        <div class="container-fluid py-5 px-3">
           <div class="row">
             <div class="col-6 col-sm-4 col-md-4 col-lg-2 pb-3">
               <img class="img-fluid game" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
@@ -117,8 +117,53 @@
           </div>
         </div>
       </section>
-      <!-- SECONDA SEZIONE HERO  -->
+      <!-- /SECONDA SEZIONE HERO  -->
 
-   </main>
+      <!-- SEZIONE ECCO LA PLAY5  -->
+      <section>
+        <div class="container text-center pb-5">
+          <div class="row text-primary fw-bold">
+            <div class="col">
+              <h6>PLAY HAS NO LIMITS</h6>
+            </div>
+          </div>
+          <div class="row text-black">
+            <div class="col">
+              <h1>Ecco la PlayStation 5 </h1>
+            </div>
+          </div>
+          <div class="row text-secondary fs-4">
+            <div class="col">
+              <div>Tuffati in nuove possibilità di gioco completamente inaspettate</div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /SEZIONE ECCO LA PLAY5  -->
+
+      <!-- SEZIONE CONSOLE PLAYSTATION 5  -->
+      <section>
+        <div class="container-fluid px-3">
+          <div class="row d-flex align-items-center">
+            <div class="col-12 col-lg-6">
+              <h1>Console PLayStation 5</h1>
+              <div class="py-3 fs-4 text-secondary">Sperimenta la nuova generazione di incredibile giochi Playstation</div>
+              <button class="btn_info px-3 py-2">Maggiori infomazioni</button>
+            </div>
+            <div class="col-12 col-lg-6">
+              <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /SEZIONE CONSOLE PLAYSTATION 5  -->
+
+      
+    </main>
+
+   
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
