aggiunta sezione accessori playstation

--- a/index.html
+++ b/index.html
@@ -158,6 +158,35 @@
       </section>
       <!-- /SEZIONE CONSOLE PLAYSTATION 5  -->
 
+      <!-- SEZIONE ACCESSORI PLAYSTATION  -->
+      <section>
+        <div class="container-fluid pt-5">
+          <div class="row d-flex justify-content-center text-center">
+            <div class="col-4 col-lg-2">
+              <img class="img-fluid px-3" src="img/playstation-5-thumb.png" alt="">
+              <div>Console PS5</div>
+            </div>
+            <div class="col-4 col-lg-2">
+              <img class="img-fluid px-3" src="img/joypad-thumb.png" alt="">
+              <div>Controller wireless</div>
+            </div>
+            <div class="col-4 col-lg-2">
+              <img class="img-fluid px-3" src="img/headset-thumb.png" alt="">
+              <div>Cuffie wireless</div>
+            </div>
+            <div class="col-4 col-lg-2">
+              <img class="img-fluid px-3" src="img/remote-thumb.png" alt="">
+              <div>Telecomando media</div>
+            </div>
+            <div class="col-4 col-lg-2">
+              <img class="img-fluid px-3" src="img/camera-thumb.jpg" alt="">
+              <div>Telecamera HD</div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /SEZIONE ACCESSORI PLAYSTATION  -->
+
       
     </main>
 
