aggiunta sezione "nuove uscite"

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!-- HEADER-TOP  -->
             <div class="header-top d-flex justify-content-end align-items-center py-2">
                 <div class="sony-logo mx-2">
-                    <img class="sony" src="img/sony_logo.svg" alt="Logo-sony">
+                  <img class="sony" src="img/sony_logo.svg" alt="Logo-sony">
                 </div>
             </div>
             <!-- /HEADER-TOP  -->
@@ -30,24 +30,24 @@
                       </button>
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                          <li class="nav-item">
+                              <a class="nav-link active" aria-current="page" href="#">Giochi <i class="fa-solid fa-angle-down mx-2"></i></a>
+                            </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Giochi <i class="fa-solid fa-angle-down mx-2"></i></a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Hardware <i class="fa-solid fa-angle-down mx-2"></i></a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Servizi <i class="fa-solid fa-angle-down mx-2"></i></a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Novità <i class="fa-solid fa-angle-down mx-2"></i></a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Acquisti <i class="fa-solid fa-angle-down mx-2"></i></a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Supporto <i class="fa-solid fa-angle-down mx-2"></i></a>
-                              </li>
+                              <a class="nav-link active" aria-current="page" href="#">Hardware <i class="fa-solid fa-angle-down mx-2"></i></a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link active" aria-current="page" href="#">Servizi <i class="fa-solid fa-angle-down mx-2"></i></a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link active" aria-current="page" href="#">Novità <i class="fa-solid fa-angle-down mx-2"></i></a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link active" aria-current="page" href="#">Acquisti <i class="fa-solid fa-angle-down mx-2"></i></a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link active" aria-current="page" href="#">Supporto <i class="fa-solid fa-angle-down mx-2"></i></a>
+                            </li>
                         </ul>
                         <div class="container d-flex justify-content-end align-items-center">  
                             <a class="nav-link active text-black fw-bold" aria-current="page" href="#">My Playstation <i class="fa-solid fa-angle-down mx-2"></i></a>
@@ -160,7 +160,7 @@
 
       <!-- SEZIONE ACCESSORI PLAYSTATION  -->
       <section>
-        <div class="container-fluid pt-5">
+        <div class="container-fluid p-5">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-4 col-lg-2">
               <img class="img-fluid px-3" src="img/playstation-5-thumb.png" alt="">
@@ -186,6 +186,96 @@
         </div>
       </section>
       <!-- /SEZIONE ACCESSORI PLAYSTATION  -->
+
+      <!-- SEZIONE SECONDA HERO  -->
+      <section class="second-hero">
+        <div class="container-fluid px-3 py-5">
+          <div class="row py-3">
+            <div class="col">
+              <img class="returnal" src="img/it-takes-two-logo.png" alt="">
+            </div>
+          </div>
+            <div class="row text-white">
+              <div class="col">
+                <h1>Un'avventura cooperativa selvaggia ti attende </h1>
+            </div>
+          </div>
+          <div class="row text-white py-3">
+            <div class="col-sm-8 col-md-8 col-lg-4">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At illum perferendis dolore assumenda doloremque nulla consequatur, odit, dolor saepe accusamus nemo, voluptates exercitationem iusto necessitatibus blanditiis ducimus velit laudantium culpa?</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 col-md-8 col-lg-4">
+              <button class="btn_buy px-3 py-2">Acquista ora</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /SEZIONE SECONDA HERO  -->
+
+      <!-- SEZIONE NUOVE USCITE  -->
+      <section class="new-game text-white">
+        <div class="container-fluid px-3 py-3">
+          <div class="row">
+            <div class="col mt-4">
+              <h3>Nuove uscite</h3>
+              <h4 class="py-3"> Giochi incredibili per PS4 e PS5 disponibili ora</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6 col-sm-4 col-lg-2 mb-5">
+              <img class="img-fluid game" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+              <div class="fw-bold mt-2">Tony Hawks Pro Skater 1+2</div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2 mb-5">
+              <img class="img-fluid game" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+              <div class="fw-bold mt-2">Crash Bandicot 4: It's About Time</div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2 mb-5">
+              <img class="img-fluid game" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+              <div class="fw-bold mt-2">Tony Hawks Pro Skater 1+2</div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2 mb-5">
+              <img class="img-fluid game" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+              <div class="fw-bold mt-2">Crash Bandicot 4: It's About Time</div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2 mb-5">
+              <img class="img-fluid game" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+              <div class="fw-bold mt-2">Tony Hawks Pro Skater 1+2</div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2 mb-5">
+              <img class="img-fluid game" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+              <div class="fw-bold mt-2">Crash Bandicot 4: It's About Time</div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2 mb-5">
+              <img class="img-fluid game" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+              <div class="fw-bold mt-2">Tony Hawks Pro Skater 1+2</div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2 mb-5">
+              <img class="img-fluid game" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+              <div class="fw-bold mt-2">Crash Bandicot 4: It's About Time</div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2 mb-5">
+              <img class="img-fluid game" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+              <div class="fw-bold mt-2">Tony Hawks Pro Skater 1+2</div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2 mb-5">
+              <img class="img-fluid game" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+              <div class="fw-bold mt-2">Crash Bandicot 4: It's About Time</div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2 mb-5">
+              <img class="img-fluid game" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+              <div class="fw-bold mt-2">Tony Hawks Pro Skater 1+2</div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2 mb-5">
+              <img class="img-fluid game" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+              <div class="fw-bold mt-2">Crash Bandicot 4: It's About Time</div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SEZIONE NUOVE USCITE  -->
 
       
     </main>
