aggiunta sezione "esplora playstation 4"

--- a/index.html
+++ b/index.html
@@ -1,67 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PlayStation</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>PlayStation</title>
+      <link rel="stylesheet" href="css/style.css">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  </head>
+  <body>
     <!-- HEADER  -->
     <header>
-        <div class="container-fluid p-0">
-            <!-- HEADER-TOP  -->
+        <!-- HEADER-TOP  -->
+          <div class="container-fluid p-0">
             <div class="header-top d-flex justify-content-end align-items-center py-2">
-                <div class="sony-logo mx-2">
-                  <img class="sony" src="img/sony_logo.svg" alt="Logo-sony">
-                </div>
+              <div class="sony-logo mx-2">
+                <img class="sony" src="img/sony_logo.svg" alt="Logo-sony">
+              </div>
             </div>
             <!-- /HEADER-TOP  -->
             <!-- HEADER-BOTTOM  -->
             <div class="header-bottom bg-white">
-                <nav class="navbar navbar-expand-lg navbar-light">
-                    <div class="container-fluid">
-                      <img class="me-3" src="img/play_logo.svg" alt="logo-playstation">
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <nav class="navbar navbar-expand-lg navbar-light">
+                  <div class="container-fluid">
+                    <img class="me-3" src="img/play_logo.svg" alt="logo-playstation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Giochi <i class="fa-solid fa-angle-down mx-2"></i></a>
+                          </li>
                           <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="#">Giochi <i class="fa-solid fa-angle-down mx-2"></i></a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="#">Hardware <i class="fa-solid fa-angle-down mx-2"></i></a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="#">Servizi <i class="fa-solid fa-angle-down mx-2"></i></a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="#">Novità <i class="fa-solid fa-angle-down mx-2"></i></a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="#">Acquisti <i class="fa-solid fa-angle-down mx-2"></i></a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="#">Supporto <i class="fa-solid fa-angle-down mx-2"></i></a>
-                            </li>
-                        </ul>
-                        <div class="container d-flex justify-content-end align-items-center">  
-                            <a class="nav-link active text-black fw-bold" aria-current="page" href="#">My Playstation <i class="fa-solid fa-angle-down mx-2"></i></a>
-                            <button class="btn_login me-3 px-3 py-2" type="submit">Accedi</button>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                            </svg>
-                        </div>
+                            <a class="nav-link active" aria-current="page" href="#">Hardware <i class="fa-solid fa-angle-down mx-2"></i></a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Servizi <i class="fa-solid fa-angle-down mx-2"></i></a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Novità <i class="fa-solid fa-angle-down mx-2"></i></a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Acquisti <i class="fa-solid fa-angle-down mx-2"></i></a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Supporto <i class="fa-solid fa-angle-down mx-2"></i></a>
+                          </li>
+                      </ul>
+                      <div class="container d-flex justify-content-end align-items-center">  
+                          <a class="nav-link active text-black fw-bold" aria-current="page" href="#">My Playstation <i class="fa-solid fa-angle-down mx-2"></i></a>
+                          <button class="btn_login me-3 px-3 py-2" type="submit">Accedi</button>
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                          </svg>
                       </div>
                     </div>
-                </nav>
-            </div>
+                  </div>
+              </nav>
+          </div>
         </div>
-        <!-- /HEADER-BOTTOM  -->
+      <!-- /HEADER-BOTTOM  -->
     </header>
     <!-- /HEADER  -->
     <main>
@@ -121,7 +121,7 @@
 
       <!-- SEZIONE ECCO LA PLAY5  -->
       <section>
-        <div class="container text-center pb-5">
+        <div class="container text-center py-5">
           <div class="row text-primary fw-bold">
             <div class="col">
               <h6>PLAY HAS NO LIMITS</h6>
@@ -275,7 +275,46 @@
           </div>
         </div>
       </section>
-      <!-- SEZIONE NUOVE USCITE  -->
+      <!-- /SEZIONE NUOVE USCITE  -->
+
+      <!-- SEZIONE ESPLORA PLAYSTATION  -->
+      <section>
+        <div class="container-fluid">
+          <div class="py-5">
+            <div class="row text-black text-center">
+              <div class="col">
+                <h1>Esplora PlayStation 4</h1>
+              </div>
+            </div>
+            <div class="row text-center text-secondary fs-4">
+              <div class="col">
+                <div>Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS4.</div>
+              </div>
+            </div>
+            <div class="row py-5">
+              <div class="col-12 col-md-4 col-lg-4 my-2">
+                <img class="img-fluid" src="img/ps4-slim-homepage-image-block.jpg" alt="">
+                <h1>PlayStation 4</h1>
+                <div class="text-secondary py-3">Giochi incdredibili live su PS4, con 1 tb di spazio di archiviazione</div>
+                <button class="btn_info px-3 py-2">Scopri di più</button>
+              </div>
+              <div class="col-12 col-md-4 col-lg-4 my-2">
+                <img class="img-fluid" src="img/double11-202010-tw-psvr.jpg" alt="">
+                <h1>PlayStation VR</h1>
+                <div class="text-secondary py-3">Oltre 500 titoli ed esperienza di gioco. Scoprili tutti.</div>
+                <button class="btn_info px-3 py-2">Scopri di più</button>
+              </div>
+              <div class="col-12 col-md-4 col-lg-4 my-2">
+                <img class="img-fluid" src="img/dualshock-4-listing-thumb.jpg" alt="">
+                <h1>Accessori</h1>
+                <div class="text-secondary py-3">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</div>
+                <button class="btn_info px-3 py-2">Scopri di più</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SEZIONE ESPLORA PLAYSTATION  -->
 
       
     </main>
@@ -283,6 +322,6 @@
    
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  </body>
 </html>
