--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
       <!-- SEZIONE ESPLORA PLAYSTATION  -->
       <section>
-        <div class="container-fluid">
+        <div class="container-fluid px-3">
           <div class="py-5">
             <div class="row text-black text-center">
               <div class="col">
@@ -296,25 +296,43 @@
                 <img class="img-fluid" src="img/ps4-slim-homepage-image-block.jpg" alt="">
                 <h1>PlayStation 4</h1>
                 <div class="text-secondary py-3">Giochi incdredibili live su PS4, con 1 tb di spazio di archiviazione</div>
-                <button class="btn_info px-3 py-2">Scopri di più</button>
+                <button class="btn_info py-2 px-3">Scopri di più</button>
               </div>
               <div class="col-12 col-md-4 col-lg-4 my-2">
                 <img class="img-fluid" src="img/double11-202010-tw-psvr.jpg" alt="">
                 <h1>PlayStation VR</h1>
                 <div class="text-secondary py-3">Oltre 500 titoli ed esperienza di gioco. Scoprili tutti.</div>
-                <button class="btn_info px-3 py-2">Scopri di più</button>
+                <button class="btn_info py-2 px-3">Scopri di più</button>
               </div>
               <div class="col-12 col-md-4 col-lg-4 my-2">
                 <img class="img-fluid" src="img/dualshock-4-listing-thumb.jpg" alt="">
                 <h1>Accessori</h1>
                 <div class="text-secondary py-3">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</div>
-                <button class="btn_info px-3 py-2">Scopri di più</button>
+                <button class="btn_info py-2 px-3">Scopri di più</button>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- SEZIONE ESPLORA PLAYSTATION  -->
+      <!-- /SEZIONE ESPLORA PLAYSTATION  -->
+
+      <!-- SEZIONE PLAYSTATION PLUS  -->
+      <section class="bg-secondary">
+        <div class="container-fluid text-black px-3">
+          <div class="row d-flex align-items-center">
+            <div class="col-12 col-lg-6 py-5">
+              <img class="plus my-4" src="img/ps-plus-logo.png" alt="">
+              <div>Migliora la esperienza PlayStation con l'accesso a multigiocatore online, giochi mesnili, sconti esclusivi e altro ancora.</div>
+              <button class="btn_plus fw-bold my-4 py-2 px-3">Esplora PlayStation Plus</button>
+            </div>
+            <div class="col-12 col-lg-6">
+              <img class="img-fluid d-none d-lg-block" src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /SEZIONE PLAYSTATION PLUS  -->
+      
 
       
     </main>
