aggiunta sezione "sconti ps store"

--- a/index.html
+++ b/index.html
@@ -332,6 +332,36 @@
         </div>
       </section>
       <!-- /SEZIONE PLAYSTATION PLUS  -->
+
+      <!-- SEZIONE SCONTI PS STORE  -->
+      <section>
+        <div class="container-fluid px-3">
+          <div class="py-5">
+            <div class="row text-black text-center">
+              <div class="col">
+                <h1>Nuovi sconti sul PlayStation Store</h1>
+              </div>
+            </div>
+            <div class="row text-center text-secondary fs-4">
+              <div class="col">
+                <div>Sconti pazzeschi, collezzioni curate e saldi stagionali su PS5, PS4 E PS VR, tutti in un unico posto.</div>
+              </div>
+            </div>
+            <div class="row py-5">
+              <div class="col-12 col-md-4 col-lg-4 my-2">
+                <img class="img-fluid" src="img/playstation-store-games-under-20-spotlight.jpg" alt="">
+              </div>
+              <div class="col-12 col-md-4 col-lg-4 my-2">
+                <img class="img-fluid" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+              </div>
+              <div class="col-12 col-md-4 col-lg-4 my-2">
+                <img class="img-fluid" src="img/playstation-store-free-to-play-spotlight.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /SEZIONE SCONTI PS STORE  -->
       
 
       
