aggiunta sezione "plasystation now"

--- a/index.html
+++ b/index.html
@@ -362,6 +362,25 @@
         </div>
       </section>
       <!-- /SEZIONE SCONTI PS STORE  -->
+
+      <!-- SEZIONE PLAYSTATION NOW  -->
+      <section class="ps-now">
+        <div class="container-fluid text-white px-3">
+          <div class="row d-flex align-items-center">
+            <div class="col-12 col-lg-6 py-5">
+              <img class="plus my-4" src="img/ps-now-logo-two-column.png" alt="">
+              <div>Migliora la esperienza PlayStation con l'accesso a multigiocatore online, giochi mesnili, sconti esclusivi e altro ancora.</div>
+              <button class="btn_plus text-black fw-bold my-4 py-2 px-3">Esplora PlayStation Plus</button>
+            </div>
+            <div class="col-12 col-lg-6">
+              <img class="img-fluid d-none d-lg-block" src="img/ps-now-april-featured-image-block.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /SEZIONE PLAYSTATION NOW  -->
+
+
       
 
       
