--- a/index.html
+++ b/index.html
@@ -164,23 +164,23 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-4 col-lg-2">
               <img class="img-fluid px-3" src="img/playstation-5-thumb.png" alt="">
-              <div>Console PS5</div>
+              <div class="d-none d-lg-block">Console PS5</div>
             </div>
             <div class="col-4 col-lg-2">
               <img class="img-fluid px-3" src="img/joypad-thumb.png" alt="">
-              <div>Controller wireless</div>
+              <div class="d-none d-lg-block">Controller wireless</div>
             </div>
             <div class="col-4 col-lg-2">
               <img class="img-fluid px-3" src="img/headset-thumb.png" alt="">
-              <div>Cuffie wireless</div>
+              <div class="d-none d-lg-block">Cuffie wireless</div>
             </div>
             <div class="col-4 col-lg-2">
               <img class="img-fluid px-3" src="img/remote-thumb.png" alt="">
-              <div>Telecomando media</div>
+              <div class="d-none d-lg-block">Telecomando media</div>
             </div>
             <div class="col-4 col-lg-2">
               <img class="img-fluid px-3" src="img/camera-thumb.jpg" alt="">
-              <div>Telecamera HD</div>
+              <div class="d-none d-lg-block">Telecamera HD</div>
             </div>
           </div>
         </div>
@@ -279,39 +279,36 @@
 
       <!-- SEZIONE ESPLORA PLAYSTATION  -->
       <section>
-        <div class="container-fluid px-3">
-          <div class="py-5">
-            <div class="row text-black text-center">
-              <div class="col">
-                <h1>Esplora PlayStation 4</h1>
-              </div>
-            </div>
-            <div class="row text-center text-secondary fs-4">
-              <div class="col">
-                <div>Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS4.</div>
-              </div>
-            </div>
-            <div class="row py-5">
-              <div class="col-12 col-md-4 col-lg-4 my-2">
-                <img class="img-fluid" src="img/ps4-slim-homepage-image-block.jpg" alt="">
-                <h1>PlayStation 4</h1>
-                <div class="text-secondary py-3">Giochi incdredibili live su PS4, con 1 tb di spazio di archiviazione</div>
-                <button class="btn_info py-2 px-3">Scopri di più</button>
-              </div>
-              <div class="col-12 col-md-4 col-lg-4 my-2">
-                <img class="img-fluid" src="img/double11-202010-tw-psvr.jpg" alt="">
-                <h1>PlayStation VR</h1>
-                <div class="text-secondary py-3">Oltre 500 titoli ed esperienza di gioco. Scoprili tutti.</div>
-                <button class="btn_info py-2 px-3">Scopri di più</button>
-              </div>
-              <div class="col-12 col-md-4 col-lg-4 my-2">
-                <img class="img-fluid" src="img/dualshock-4-listing-thumb.jpg" alt="">
-                <h1>Accessori</h1>
-                <div class="text-secondary py-3">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</div>
-                <button class="btn_info py-2 px-3">Scopri di più</button>
-              </div>
+        <div class="container-fluid px-3 py-5">
+          <div class="row text-black text-center py-5">
+            <div class="col">
+              <h1>Esplora PlayStation 4</h1>
             </div>
           </div>
+          <div class="row text-center text-secondary fs-4">
+            <div class="col">
+              <div>Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS4.</div>
+            </div>
+          </div>
+          <div class="row py-5">
+            <div class="col-12 col-md-4 col-lg-4 my-2">
+              <img class="img-fluid" src="img/ps4-slim-homepage-image-block.jpg" alt="">
+              <h1>PlayStation 4</h1>
+              <div class="text-secondary py-3">Giochi incdredibili live su PS4, con 1 tb di spazio di archiviazione</div>
+              <button class="btn_info py-2 px-3">Scopri di più</button>
+            </div>
+            <div class="col-12 col-md-4 col-lg-4 my-2">
+              <img class="img-fluid" src="img/double11-202010-tw-psvr.jpg" alt="">
+              <h1>PlayStation VR</h1>
+              <div class="text-secondary py-3">Oltre 500 titoli ed esperienza di gioco. Scoprili tutti.</div>
+              <button class="btn_info py-2 px-3">Scopri di più</button>
+            </div>
+            <div class="col-12 col-md-4 col-lg-4 my-2">
+              <img class="img-fluid" src="img/dualshock-4-listing-thumb.jpg" alt="">
+              <h1>Accessori</h1>
+              <div class="text-secondary py-3">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</div>
+              <button class="btn_info py-2 px-3">Scopri di più</button>
+            </div>
         </div>
       </section>
       <!-- /SEZIONE ESPLORA PLAYSTATION  -->
@@ -335,28 +332,26 @@
 
       <!-- SEZIONE SCONTI PS STORE  -->
       <section>
-        <div class="container-fluid px-3">
-          <div class="py-5">
-            <div class="row text-black text-center">
-              <div class="col">
-                <h1>Nuovi sconti sul PlayStation Store</h1>
-              </div>
+        <div class="container-fluid px-3 py-5">
+          <div class="row text-black text-center py-5">
+            <div class="col">
+              <h1>Nuovi sconti sul PlayStation Store</h1>
             </div>
-            <div class="row text-center text-secondary fs-4">
-              <div class="col">
-                <div>Sconti pazzeschi, collezzioni curate e saldi stagionali su PS5, PS4 E PS VR, tutti in un unico posto.</div>
-              </div>
+          </div>
+          <div class="row text-center text-secondary fs-4">
+            <div class="col">
+              <div>Sconti pazzeschi, collezzioni curate e saldi stagionali su PS5, PS4 E PS VR, tutti in un unico posto.</div>
             </div>
-            <div class="row py-5">
-              <div class="col-12 col-md-4 col-lg-4 my-2">
-                <img class="img-fluid" src="img/playstation-store-games-under-20-spotlight.jpg" alt="">
-              </div>
-              <div class="col-12 col-md-4 col-lg-4 my-2">
-                <img class="img-fluid" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
-              </div>
-              <div class="col-12 col-md-4 col-lg-4 my-2">
-                <img class="img-fluid" src="img/playstation-store-free-to-play-spotlight.png" alt="">
-              </div>
+          </div>
+          <div class="row py-5">
+            <div class="col-12 col-md-4 col-lg-4 my-2">
+              <img class="img-fluid" src="img/playstation-store-games-under-20-spotlight.jpg" alt="">
+            </div>
+            <div class="col-12 col-md-4 col-lg-4 my-2">
+              <img class="img-fluid" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+            </div>
+            <div class="col-12 col-md-4 col-lg-4 my-2">
+              <img class="img-fluid" src="img/playstation-store-free-to-play-spotlight.png" alt="">
             </div>
           </div>
         </div>
@@ -379,6 +374,32 @@
         </div>
       </section>
       <!-- /SEZIONE PLAYSTATION NOW  -->
+
+      <!-- SEZIONE SOCIAL MEDIA  -->
+      <section>
+        <div class="container text-center pt-5">
+          <div class="row py-5">
+            <div class="col">
+              <h1>Seguici sui social media</h1>
+            </div>
+          </div>
+          <div class="row py-5">
+            <div class="col-6 col-lg-3 mb-4">
+              <img class="img-fluid" src="img/twitter.jpg" alt="">
+            </div>
+            <div class="col-6 col-lg-3">
+              <img class="img-fluid" src="img/facebook.jpg" alt="">
+            </div>
+            <div class="col-6 col-lg-3">
+              <img class="img-fluid" src="img/instagram.jpg" alt="">
+            </div>
+            <div class="col-6 col-lg-3">
+              <img class="img-fluid" src="img/youtube.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /SEZIONE SOCIAL MEDIA  -->
 
 
       
