--- a/index.html
+++ b/index.html
@@ -163,23 +163,23 @@
         <div class="container-fluid p-5">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-4 col-lg-2">
-              <img class="img-fluid px-3" src="img/playstation-5-thumb.png" alt="">
+              <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
               <div class="d-none d-lg-block">Console PS5</div>
             </div>
             <div class="col-4 col-lg-2">
-              <img class="img-fluid px-3" src="img/joypad-thumb.png" alt="">
+              <img class="img-fluid" src="img/joypad-thumb.png" alt="">
               <div class="d-none d-lg-block">Controller wireless</div>
             </div>
             <div class="col-4 col-lg-2">
-              <img class="img-fluid px-3" src="img/headset-thumb.png" alt="">
+              <img class="img-fluid" src="img/headset-thumb.png" alt="">
               <div class="d-none d-lg-block">Cuffie wireless</div>
             </div>
             <div class="col-4 col-lg-2">
-              <img class="img-fluid px-3" src="img/remote-thumb.png" alt="">
+              <img class="img-fluid" src="img/remote-thumb.png" alt="">
               <div class="d-none d-lg-block">Telecomando media</div>
             </div>
             <div class="col-4 col-lg-2">
-              <img class="img-fluid px-3" src="img/camera-thumb.jpg" alt="">
+              <img class="img-fluid" src="img/camera-thumb.jpg" alt="">
               <div class="d-none d-lg-block">Telecamera HD</div>
             </div>
           </div>
