--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
       <!-- /HEADER-BOTTOM  -->
     </header>
     <!-- /HEADER  -->
+
+    <!-- MAIN  -->
     <main>
       <!-- SEZIONE HERO  -->
       <section class="hero">
@@ -400,16 +402,66 @@
         </div>
       </section>
       <!-- /SEZIONE SOCIAL MEDIA  -->
-
-
-      
-
-      
     </main>
+    <!-- /MAIN  -->
 
-   
-
-
+    <!-- FOOTER  -->
+    <footer class="bg-primary text-white">
+      <div class="container-fluid px-3 py-4">
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <img class="img-fluid pt-5 pb-3" src="img/ps-footer.svg" alt="">
+            <div class="row">
+              <div class="col-12 col-lg-6 d-flex">
+                <img class="img-globe me-3" src="img/language-globe.svg" alt="">
+                <div>Country/Region: Italy</div>
+              </div>
+            </div>
+          </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+          <div class="row d-flex py-5">
+            <div class="col-12 col-md-4 col-lg-4">
+              <ul>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+              </ul>
+            </div>
+            <div class="col-12 col-md-4 col-lg-4">
+              <ul>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+              </ul>
+            </div>
+            <div class="col-12 col-md-4 col-lg-4">
+              <ul>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+                <li><a href="">link</a></li>
+              </ul>
+            </div>
+          </div> 
+        </div>
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <img class="sie py-1" src="img/sie-logo.svg" alt="">
+            <p>Website ©2022 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. Maggiori info</p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
