--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="header-bottom bg-white">
               <nav class="navbar navbar-expand-lg navbar-light">
                   <div class="container-fluid">
-                    <img class="me-3" src="img/play_logo.svg" alt="logo-playstation">
+                    <img class="me-2" src="img/play_logo.svg" alt="logo-playstation">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -49,13 +49,16 @@
                             <a class="nav-link active" aria-current="page" href="#">Supporto <i class="fa-solid fa-angle-down mx-2"></i></a>
                           </li>
                       </ul>
-                      <div class="container d-flex justify-content-end align-items-center">  
-                          <a class="nav-link active text-black fw-bold" aria-current="page" href="#">My Playstation <i class="fa-solid fa-angle-down mx-2"></i></a>
-                          <button class="btn_login me-3 px-3 py-2" type="submit">Accedi</button>
-                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                          </svg>
-                      </div>
+                      <div class="d-flex align-items-center">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">My PlayStation<span><i class="fa-solid fa-angle-down mx-2"></i></a>
+                          </li>
+                        </ul> 
+                      <button class="btn_login me-3 px-3 py-2" type="submit">Accedi</button>
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                      </svg>
                     </div>
                   </div>
               </nav>
@@ -69,7 +72,7 @@
     <main>
       <!-- SEZIONE HERO  -->
       <section class="hero">
-        <div class="container-fluid px-3 custom">
+        <div class="container custom">
           <div class="row py-3">
             <div class="col">
               <img class="returnal" src="img/returnal-hero-banner-logo.png" alt="">
@@ -96,7 +99,7 @@
 
       <!-- SECONDA SEZIONE HERO  -->
       <section>
-        <div class="container-fluid py-5 px-3">
+        <div class="container py-5">
           <div class="row">
             <div class="col-6 col-sm-4 col-md-4 col-lg-2 pb-3">
               <img class="img-fluid game" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
@@ -145,7 +148,7 @@
 
       <!-- SEZIONE CONSOLE PLAYSTATION 5  -->
       <section>
-        <div class="container-fluid px-3">
+        <div class="container">
           <div class="row d-flex align-items-center">
             <div class="col-12 col-lg-6">
               <h1>Console PLayStation 5</h1>
@@ -162,7 +165,7 @@
 
       <!-- SEZIONE ACCESSORI PLAYSTATION  -->
       <section>
-        <div class="container-fluid p-5">
+        <div class="container p-5">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-4 col-lg-2">
               <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
@@ -191,7 +194,7 @@
 
       <!-- SEZIONE SECONDA HERO  -->
       <section class="second-hero">
-        <div class="container-fluid px-3 py-5">
+        <div class="container py-5">
           <div class="row py-3">
             <div class="col">
               <img class="returnal" src="img/it-takes-two-logo.png" alt="">
@@ -218,7 +221,7 @@
 
       <!-- SEZIONE NUOVE USCITE  -->
       <section class="new-game text-white">
-        <div class="container-fluid px-3 py-3">
+        <div class="container py-3">
           <div class="row">
             <div class="col mt-4">
               <h3>Nuove uscite</h3>
@@ -281,7 +284,7 @@
 
       <!-- SEZIONE ESPLORA PLAYSTATION  -->
       <section>
-        <div class="container-fluid px-3 py-5">
+        <div class="container py-5">
           <div class="row text-black text-center py-5">
             <div class="col">
               <h1>Esplora PlayStation 4</h1>
@@ -317,7 +320,7 @@
 
       <!-- SEZIONE PLAYSTATION PLUS  -->
       <section class="bg-secondary">
-        <div class="container-fluid text-black px-3">
+        <div class="container text-black">
           <div class="row d-flex align-items-center">
             <div class="col-12 col-lg-6 py-5">
               <img class="plus my-4" src="img/ps-plus-logo.png" alt="">
@@ -334,7 +337,7 @@
 
       <!-- SEZIONE SCONTI PS STORE  -->
       <section>
-        <div class="container-fluid px-3 py-5">
+        <div class="container py-5">
           <div class="row text-black text-center py-5">
             <div class="col">
               <h1>Nuovi sconti sul PlayStation Store</h1>
@@ -362,7 +365,7 @@
 
       <!-- SEZIONE PLAYSTATION NOW  -->
       <section class="ps-now">
-        <div class="container-fluid text-white px-3">
+        <div class="container text-white">
           <div class="row d-flex align-items-center">
             <div class="col-12 col-lg-6 py-5">
               <img class="plus my-4" src="img/ps-now-logo-two-column.png" alt="">
@@ -407,7 +410,7 @@
 
     <!-- FOOTER  -->
     <footer class="bg-primary text-white">
-      <div class="container-fluid px-3 py-4">
+      <div class="container py-4">
         <div class="row">
           <div class="col-12 col-lg-6">
             <img class="img-fluid pt-5 pb-3" src="img/ps-footer.svg" alt="">
