aggiunto alcuni effetti hover e transition

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
               </div>
             </div>
             <!-- /HEADER-TOP  -->
+            
             <!-- HEADER-BOTTOM  -->
             <div class="header-bottom bg-white">
               <nav class="navbar navbar-expand-lg navbar-light">
@@ -31,28 +32,28 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Giochi <i class="fa-solid fa-angle-down mx-2"></i></a>
+                            <a class="nav-link" aria-current="page" href="#">Giochi <i class="fa-solid fa-angle-down mx-2"></i></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Hardware <i class="fa-solid fa-angle-down mx-2"></i></a>
+                            <a class="nav-link" aria-current="page" href="#">Hardware <i class="fa-solid fa-angle-down mx-2"></i></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Servizi <i class="fa-solid fa-angle-down mx-2"></i></a>
+                            <a class="nav-link" aria-current="page" href="#">Servizi <i class="fa-solid fa-angle-down mx-2"></i></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Novità <i class="fa-solid fa-angle-down mx-2"></i></a>
+                            <a class="nav-link" aria-current="page" href="#">Novità <i class="fa-solid fa-angle-down mx-2"></i></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Acquisti <i class="fa-solid fa-angle-down mx-2"></i></a>
+                            <a class="nav-link" aria-current="page" href="#">Acquisti <i class="fa-solid fa-angle-down mx-2"></i></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Supporto <i class="fa-solid fa-angle-down mx-2"></i></a>
+                            <a class="nav-link" aria-current="page" href="#">Supporto <i class="fa-solid fa-angle-down mx-2"></i></a>
                           </li>
                       </ul>
                       <div class="d-flex align-items-center">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">My PlayStation<span><i class="fa-solid fa-angle-down mx-2"></i></a>
+                            <a class="nav-link" aria-current="page" href="#">My PlayStation<span><i class="fa-solid fa-angle-down mx-2"></i></a>
                           </li>
                         </ul> 
                       <button class="btn_login me-3 px-3 py-2" type="submit">Accedi</button>
@@ -388,17 +389,17 @@
               <h1>Seguici sui social media</h1>
             </div>
           </div>
-          <div class="row py-5">
-            <div class="col-6 col-lg-3 mb-4">
+          <div class="row py-5 d-flex justify-content-center">
+            <div class="col-6 col-lg-2 mb-4">
               <img class="img-fluid" src="img/twitter.jpg" alt="">
             </div>
-            <div class="col-6 col-lg-3">
+            <div class="col-6 col-lg-2">
               <img class="img-fluid" src="img/facebook.jpg" alt="">
             </div>
-            <div class="col-6 col-lg-3">
+            <div class="col-6 col-lg-2">
               <img class="img-fluid" src="img/instagram.jpg" alt="">
             </div>
-            <div class="col-6 col-lg-3">
+            <div class="col-6 col-lg-2">
               <img class="img-fluid" src="img/youtube.png" alt="">
             </div>
           </div>
