--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               </div>
             </div>
             <!-- /HEADER-TOP  -->
-            
+
             <!-- HEADER-BOTTOM  -->
             <div class="header-bottom bg-white">
               <nav class="navbar navbar-expand-lg navbar-light">
@@ -150,7 +150,7 @@
       <!-- SEZIONE CONSOLE PLAYSTATION 5  -->
       <section>
         <div class="container">
-          <div class="row d-flex align-items-center">
+          <div class="row d-flex align-items-center my-3">
             <div class="col-12 col-lg-6">
               <h1>Console PLayStation 5</h1>
               <div class="py-3 fs-4 text-secondary">Sperimenta la nuova generazione di incredibile giochi Playstation</div>
